minor changes to writing

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -270,36 +270,17 @@ a fresh R session, and so it is not sufficient to guard against these errors.
 
 ### Best practices for including R packages in notebooks
 
-Most data analyses these days depend on functions from external R packages that
-are not built-in to R. One example of this is the `tidyverse` metapackage that 
-we heavily rely on in this book. It provides us access to functions like 
-`read_csv` for reading data, `select` for subsetting columns, and `ggplot` for 
-creating high-quality graphics. 
 
-As mentioned earlier in the book, external R packages need to be loaded before
-the functions they contain can be used. Our recommended way to do this is via 
-`library(package_name)`. But where should this line of code be written in a 
-Jupyter notebook? One idea could be to load the library right before the 
-function is used in the notebook. However, although this technically works, this
-causes hidden, or at least non-obvious, R package dependencies when others view
-or try to run the notebook. These hidden dependencies can lead to errors when 
-the notebook is executed on another computer if the needed R packages are not
-installed. Additionally, if the data analysis code takes a long time to run, 
-uncovering the hidden dependencies that need to be installed so that the 
-analysis can run without error can take a great deal of time to uncover.
 
-To avoid this, it is highly recommended that all R packages are loaded in a code
-cell near the top of the Jupyter notebook. Doing this not only ensures that all 
-packages are loaded before their functions are called (assuming the notebook is
-run in a linear order from top to bottom, as recommended above), but also makes
-it easy for others wanting to view or run the notebook, to understand what 
-external R packages were used in the data analysis, and hence, what R packages
-they would have to ensure are installed on their computer to successfully run 
-the analysis.
+Most data analyses these days depend on functions from external R packages that are not built-in to R. One example is the `tidyverse` metapackage that we heavily rely on in this book. This package provides us access to functions like `read_csv` for reading data, `select` for subsetting columns, and `ggplot` for creating high-quality graphics. 
+
+As mentioned earlier in the book, external R packages need to be loaded before the functions they contain can be used. Our recommended way to do this is via `library(package_name)`. But where should this line of code be written in a Jupyter notebook? One idea could be to load the library right before the function is used in the notebook. However, although this technically works, this causes hidden, or at least non-obvious, R package dependencies when others view or try to run the notebook. These hidden dependencies can lead to errors when the notebook is executed on another computer if the needed R packages are not installed. Additionally, if the data analysis code takes a long time to run, uncovering the hidden dependencies that need to be installed so that the analysis can run without error can take a great deal of time to uncover.
+
+Therefore, we recommend you load all R packages in a code cell near the top of the Jupyter notebook. Loading all your packages at the start ensures that all packages are loaded before their functions are called (assuming the notebook is run in a linear order from top to bottom, as recommended above) and makes it easy for others viewing or running the notebook to see what external R packages were used in the analysis, and hence, what packages they should install on their computer to run the analysis successfully.
 
 ### Summary of best practices for running a notebook
 
-1. Write code so that it is expected to be executed in a linear order.
+1. Write code so that it can be executed in a linear order.
 
 2. As you write code in a Jupyter notebook, run the notebook in a linear order 
 and in it's entirety often (2-3 times every work session) via the **Kernel** >> 
