Broke into steps

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -74,10 +74,13 @@ image_read("img/code-cell-run.png") %>%
 
 ### Executing code cells
 
-Code cells can be run independently or as part of executing the entire notebook using one of the "**Run all**" commands found in the **Run** or **Kernel** menus in Jupyter. Running a single code cell independently is a workflow typically used when editing or 
-writing your own R code. Executing an entire notebook is a workflow typically 
-used to ensure that your analysis runs in its entirety before sharing it with
-others, and when using a notebook as part of an automated process.
+Code cells can be run independently or as part of executing the entire notebook 
+using one of the "**Run all**" commands found in the **Run** or **Kernel** menus 
+in Jupyter. Running a single code cell independently is a workflow typically 
+used when editing or writing your own R code. Executing an entire notebook is a 
+workflow typically used to ensure that your analysis runs in its entirety before 
+sharing it with others, and when using a notebook as part of an automated 
+process.
 
 To run the a code cell independently, the cell needs to first be activated. This
 is done by clicking on it with the cursor. Jupyter will indicate a cell has been
@@ -91,18 +94,22 @@ image_read("img/activate-and-run-button-annotated.png") %>%
   image_crop("3632x900")
 ```
 
-To execute all of the code cells in an entire notebook, you can either select 
-**Run** >> **Run All Cells**, or **Kernel** >> 
-**Restart Kernel and Run All Cells...** from the Jupyter menu. Additionally, 
-there is a **Restart the kernel, then re-run the whole notebook** button (▶▶) in 
-the Jupyter notebook tab menu. All of these commands result in all of the code 
-cells in a notebook being run, however only
-the **Restart Kernel and Run All Cells...** command and the ▶▶ button will restart 
-the R session before running all of the cells. Restarting the R session before 
-running all of the cells means that all previous objects that were created from 
-running cells before this command was run will be deleted. This command emulates
-how your notebook code would run if you completely restarted Jupyter before 
-executing your entire notebook.
+To execute all of the code cells in an entire notebook, you can either select:
+
+1. **Run** >> **Run All Cells**
+
+2. **Kernel** >> **Restart Kernel and Run All Cells...** from the Jupyter menu
+
+3. Click the **Restart the kernel, then re-run the whole notebook** button (▶▶) 
+in the Jupyter notebook tab menu. 
+
+All of these commands result in all of the code cells in a notebook being run, 
+however only the **Restart Kernel and Run All Cells...** command and the ▶▶ 
+button will restart the R session before running all of the cells. Restarting 
+the R session before running all of the cells means that all previous objects 
+that were created from running cells before this command was run will be 
+deleted. This command emulates how your notebook code would run if you 
+completely restarted Jupyter before executing your entire notebook.
 
 ```{r restart-kernel-run-all, echo = FALSE, fig.cap = "Restarting the R session can be accomplished by clicking Restart Kernel and Run All Cells...", fig.retina = 2, out.width="100%"}
 image_read("img/restart-kernel-run-all.png") %>% 
