Directly referenced figures in discussion

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -226,21 +226,15 @@ suppose you write some R code that creates an R object, say a variable named
 `y`. When you execute that cell and create `y`, it will continue 
 to exist until it is deliberately deleted with R code, or when the Jupyter 
 notebook R session (*i.e.*, kernel) is stopped or restarted. It can also be 
-referenced in another distinct code cell. Together, this means that you could then write 
-a code cell further above in the notebook that references `y` and execute 
-it without error in the current session. This could also be done successfully in 
+referenced in another distinct code cell (Figure \@ref(fig:out-of-order-1)). 
+Together, this means that you could then write a code cell further above in the
+notebook that references `y` and execute it without error in the current session 
+(Figure \@ref(fig:out-of-order-2)). This could also be done successfully in 
 future sessions if, and only if, you run the cells in the same non-conventional 
 order. However, it is difficult to remember this non-conventional order, and it 
-is not the order that others would expect your code to be executed in. An 
-example of this scenario is shown in figures 
-\@ref(fig:out-of-order-1) - \@ref(fig:out-of-order-3).
-
-Another thing that the flexibility of a Jupyter notebooks allows you to do is create 
-objects through running a cell, which later gets deleted. In such a scenario, that 
-object only exists for that one particular R session and would not exist again 
-if the notebook session was restarted and the notebook run again. If that 
-object was referenced in another cell in that notebook, an error would likely
-occur when the Jupyter notebook was run again in a new session.
+is not the order that others would expect your code to be executed in. Thus in 
+future this would lead to errors when the notebook is run in the conventional 
+linear order (Figure \@ref(fig:out-of-order-3)).
 
 ```{r out-of-order-1, echo = FALSE, fig.cap = "Code that was written out of order, but not yet executed.", fig.retina = 2, out.width="100%"}
 image_read("img/out-of-order-1.png") %>% 
@@ -256,6 +250,13 @@ image_read("img/out-of-order-2.png") %>%
 image_read("img/out-of-order-3.png") %>% 
   image_crop("3632x800")
 ```
+
+Another thing that the flexibility of a Jupyter notebooks allows you to do is 
+create objects through running a cell, which later gets deleted. In such a 
+scenario, that object only exists for that one particular R session and would 
+not exist again if the notebook session was restarted and the notebook run 
+again. If that object was referenced in another cell in that notebook, an error 
+would likely occur when the Jupyter notebook was run again in a new session.
 
 These events may not negatively affect the current R session when 
 the code was being written, but as you might now see, they will likely lead to 
