moved recommendation to next paragraph

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -264,11 +264,11 @@ errors when that notebook is run in a future session. Regularly, and
 intentionally executing the entire notebook in a fresh R session will help guard 
 against this by letting a user know that some aspect of the code does not allow 
 the notebook to be run linearly. Knowing this sooner than later will allow the 
-user to fix the issue quickly and easily, ideally within that session. We 
-recommend doing this at least 2-3 times within any work session on a Jupyter 
-notebook.
+user to fix the issue quickly and easily, ideally within that session. 
 
-Note that a key thing about our best practice recommendation here is not just
+We recommend as a best practice to run the entire notebook in a fresh R session,
+at least 2-3 times within any work session on a Jupyter notebook. Note that a 
+key thing about our best practice recommendation here is not just
 running all the cells, but also doing this in a fresh R session. To do this in 
 Jupyter, we recommend using either the **Kernel** >> 
 **Restart Kernel and Run All Cells...** command from the Jupyter menu or the ▶▶ 
