fixed semantic line breaks and added headers for html and pdf exports

--- a/11-getting-started-with-Jupyter.Rmd
+++ b/11-getting-started-with-Jupyter.Rmd
@@ -11,9 +11,12 @@ knitr::opts_chunk$set(message = FALSE)
 
 To be able to effectively and efficiently write R code for your analysis you 
 will need access to the R programming language on a computer. This chapter will 
-show you how to use the R programming language with a common coding 
-platform in data science, Jupyter. In this chapter, we will show you how to use this platform via a web-interface for ease of getting going 
-quickly. In a later chapter, we will also show you how to install and configure this on your local computer (i.e., laptop). These skills are essential to getting your analysis running; think of it like getting dressed in the morning!
+show you how to use the R programming language with a common coding platform in 
+data science, Jupyter. In this chapter, we will show you how to use this 
+platform via a web-interface for ease of getting going quickly. In a later 
+chapter, we will also show you how to install and configure this on your local 
+computer (i.e., laptop). These skills are essential to getting your analysis 
+running; think of it like getting dressed in the morning!
 
 ## Chapter learning objectives
 
@@ -26,11 +29,23 @@ By the end of the chapter, students will be able to:
 
 ## Jupyter
 
-Jupyter is a web-based interactive development environment for creating, editing and executing documents called Jupyter notebooks. Jupyter notebooks are documents that contain a mix of computer code (and its output) and formattable text. Given that they combine these two analysis artifacts in a single document—code is not separate from the output or written report—notebooks are one of the leading tools to create reproducible data analyses. Reproducible data analysis is one where you can reliably and easily recreate the same results when analyzing the same data. Although this sounds like something that should always be true of any data analysis, in reality, this is not often the case; one needs to make a conscious effort to perform data analysis in a reproducible manner.
+Jupyter is a web-based interactive development environment for creating, editing 
+and executing documents called Jupyter notebooks. Jupyter notebooks are 
+documents that contain a mix of computer code (and its output) and formattable 
+text. Given that they combine these two analysis artifacts in a single 
+document—code is not separate from the output or written report—notebooks are 
+one of the leading tools to create reproducible data analyses. Reproducible data 
+analysis is one where you can reliably and easily recreate the same results when 
+analyzing the same data. Although this sounds like something that should always 
+be true of any data analysis, in reality, this is not often the case; one needs 
+to make a conscious effort to perform data analysis in a reproducible manner.
 
-The name Jupyter came from combining the names of the three programming languages that it was initially targeted for (Julia, Python, and R), and now many other languages can be used with Jupyter notebooks.
+The name Jupyter came from combining the names of the three programming 
+languages that it was initially targeted for (Julia, Python, and R), and now 
+many other languages can be used with Jupyter notebooks.
 
-An example of what a Jupyter notebook looks like is shown in \@ref(fig:img-jupyter).
+An example of what a Jupyter notebook looks like is shown in 
+Figure \@ref(fig:img-jupyter).
 
 ```{r img-jupyter, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A screenshot of a Jupyter Notebook.", fig.retina = 2}
 knitr::include_graphics("img/jupyter.png")
@@ -39,7 +54,8 @@ knitr::include_graphics("img/jupyter.png")
 ### Accessing Jupyter
 
 One of the easiest ways to start computing in R with Jupyter is to use a 
-web-based platform called JupyterHub that already has Jupyter, R, a number of R packages, and collaboration tools installed, configured and ready to use. 
+web-based platform called JupyterHub that already has Jupyter, R, a number of R 
+packages, and collaboration tools installed, configured and ready to use. 
 JupyterHub's are usually created and provisioned by organizations (for example,
 a university, a company, *etcetera*) and require authentication to gain 
 access. <!--- Insert link to public JupyterHub here if we can get 
@@ -51,8 +67,8 @@ chapter \@ref(move-to-your-own-machine).
 ## Code cells
 
 The sections of a Jupyter notebook that contain code in the R programming 
-language are referred to as code cells. A code cell that has not yet been executed 
-has no number inside the square brackets to the left of the cell 
+language are referred to as code cells. A code cell that has not yet been 
+executed has no number inside the square brackets to the left of the cell 
 (Figure \@ref(fig:code-cell-not-run)). Running a code cell will execute all of 
 the code it contains, and the output (if any exists) will be displayed directly
 underneath the code that generated it. Outputs may include printed text or 
@@ -117,10 +133,10 @@ image_read("img/restart-kernel-run-all.png") %>%
 ```
 
 > #### The Kernel
-> The kernel is a program that executes the code inside your notebook and outputs
-> the results. Kernels for many different programming languages have been 
-> created for Jupyter, which means that Jupyter can interpret and execute the 
-> code of many different programming languages. To run R code, your notebook 
+> The kernel is a program that executes the code inside your notebook and 
+> outputs the results. Kernels for many different programming languages have 
+> been created for Jupyter, which means that Jupyter can interpret and execute 
+> the code of many different programming languages. To run R code, your notebook 
 > will need an R kernel. In the top right of your window, you can see a circle 
 > that indicates the status of your kernel. If the circle is empty (⚪), 
 > the kernel is idle and ready to execute code. If the circle is filled in (⚫), 
@@ -136,7 +152,10 @@ image_read("img/restart-kernel-run-all.png") %>%
 
 ### Creating new code cells
 
-To create a new code cell in Jupyter, click the `+` button in the Jupyter notebook tab menu. By default, all new cells in Jupyter start out as code cells, so after this, all you have to do is write R code within the new cell you just created!
+To create a new code cell in Jupyter, click the `+` button in the Jupyter 
+notebook tab menu. By default, all new cells in Jupyter start out as code cells, 
+so after this, all you have to do is write R code within the new cell you just 
+created!
 
 ```{r create-new-code-cell, echo = FALSE, fig.cap = "New cells can be created by clicking the + button, and are by default code cells.", fig.retina = 2, out.width="100%"}
 image_read("img/create-new-code-cell.png") %>% 
@@ -183,7 +202,9 @@ image_read("img/markdown-cell-run.png") %>%
 ### Creating new Markdown cells
 
 To create a new Markdown cell in Jupyter, click the `+` button in the Jupyter 
-notebook tab menu. By default, all new cells in Jupyter start as code cells, so the cell format needs to be changed to be recognized and rendered as a Markdown cell. To do this, click on the cell with your cursor to 
+notebook tab menu. By default, all new cells in Jupyter start as code cells, so 
+the cell format needs to be changed to be recognized and rendered as a Markdown 
+cell. To do this, click on the cell with your cursor to 
 ensure it is activated, and then click on the drop-down box next to the 
 **Restart the kernel, then re-run the whole notebook** button (▶▶) in the 
 Jupyter notebook tab menu and changing it from "**Code**" to "**Markdown**".
@@ -280,11 +301,31 @@ a fresh R session, and so it is not sufficient to guard against these errors.
 
 
 
-Most data analyses these days depend on functions from external R packages that are not built-in to R. One example is the `tidyverse` metapackage that we heavily rely on in this book. This package provides us access to functions like `read_csv` for reading data, `select` for subsetting columns, and `ggplot` for creating high-quality graphics. 
+Most data analyses these days depend on functions from external R packages that 
+are not built-in to R. One example is the `tidyverse` metapackage that we 
+heavily rely on in this book. This package provides us access to functions like 
+`read_csv` for reading data, `select` for subsetting columns, and `ggplot` for 
+creating high-quality graphics. 
 
-As mentioned earlier in the book, external R packages need to be loaded before the functions they contain can be used. Our recommended way to do this is via `library(package_name)`. But where should this line of code be written in a Jupyter notebook? One idea could be to load the library right before the function is used in the notebook. However, although this technically works, this causes hidden, or at least non-obvious, R package dependencies when others view or try to run the notebook. These hidden dependencies can lead to errors when the notebook is executed on another computer if the needed R packages are not installed. Additionally, if the data analysis code takes a long time to run, uncovering the hidden dependencies that need to be installed so that the analysis can run without error can take a great deal of time to uncover.
+As mentioned earlier in the book, external R packages need to be loaded before 
+the functions they contain can be used. Our recommended way to do this is via 
+`library(package_name)`. But where should this line of code be written in a 
+Jupyter notebook? One idea could be to load the library right before the 
+function is used in the notebook. However, although this technically works, this 
+causes hidden, or at least non-obvious, R package dependencies when others view 
+or try to run the notebook. These hidden dependencies can lead to errors when 
+the notebook is executed on another computer if the needed R packages are not 
+installed. Additionally, if the data analysis code takes a long time to run, 
+uncovering the hidden dependencies that need to be installed so that the 
+analysis can run without error can take a great deal of time to uncover.
 
-Therefore, we recommend you load all R packages in a code cell near the top of the Jupyter notebook. Loading all your packages at the start ensures that all packages are loaded before their functions are called (assuming the notebook is run in a linear order from top to bottom, as recommended above) and makes it easy for others viewing or running the notebook to see what external R packages were used in the analysis, and hence, what packages they should install on their computer to run the analysis successfully.
+Therefore, we recommend you load all R packages in a code cell near the top of 
+the Jupyter notebook. Loading all your packages at the start ensures that all 
+packages are loaded before their functions are called (assuming the notebook is 
+run in a linear order from top to bottom, as recommended above) and makes it 
+easy for others viewing or running the notebook to see what external R packages 
+were used in the analysis, and hence, what packages they should install on 
+their computer to run the analysis successfully.
 
 ### Summary of best practices for running a notebook
 
@@ -300,7 +341,16 @@ notebook.
 
 ## Exploring data files
 
-It is essential to preview data files before you try to read them into R to see whether or not there are column names, what the delimiters are, and if there are lines you need to skip. In Jupyter, you preview data files stored as plain text files (e.g., comma- and tab-separated files) in their plain text format by right-clicking on the file's name in the Jupyter file explorer and selecting **Open with** and then selecting **Editor**. Suppose you do not specify to open the data file with an editor. In that case, Jupyter will render a nice table for you, and you will not be able to see the column delimiters, and therefore you will not know which function to use, nor which arguments to use and values to specify for them.
+It is essential to preview data files before you try to read them into R to see
+whether or not there are column names, what the delimiters are, and if there are 
+lines you need to skip. In Jupyter, you preview data files stored as plain text 
+files (e.g., comma- and tab-separated files) in their plain text format by 
+right-clicking on the file's name in the Jupyter file explorer and selecting 
+**Open with** and then selecting **Editor**. Suppose you do not specify to open 
+the data file with an editor. In that case, Jupyter will render a nice table 
+for you, and you will not be able to see the column delimiters, and therefore 
+you will not know which function to use, nor which arguments to use and values 
+to specify for them.
 
 ```{r open-data-w-editor-01, echo = FALSE, fig.cap = "Opening data files with an editor in Jupyter.", fig.retina = 2, out.width="100%"}
 image_read("img/open_data_w_editor_01.png") %>% 
@@ -314,15 +364,41 @@ image_read("img/open_data_w_editor_02.png") %>%
 
 ## Exporting to a different file format 
 
-In Jupyter, viewing, editing and running R code is done in the Jupyter notebook (file extension `.ipynb`) file format. This file format is not easy to open and view outside of Jupyter. Thus, to share your analysis with people who do not commonly use Jupyter, it is recommended that you export your executed analysis as a more common file type, such as an `.html` file, or a `.pdf`. We recommend exporting the Jupyter notebook after executing the analysis so that you can also share the outputs of your code.
+In Jupyter, viewing, editing and running R code is done in the Jupyter notebook 
+(file extension `.ipynb`) file format. This file format is not easy to open and 
+view outside of Jupyter. Thus, to share your analysis with people who do not 
+commonly use Jupyter, it is recommended that you export your executed analysis 
+as a more common file type, such as an `.html` file, or a `.pdf`. We recommend 
+exporting the Jupyter notebook after executing the analysis so that you can 
+also share the outputs of your code.
 
-The `.html` file format will result in a shareable file that anyone can open using a web browser (*e.g.,* Firefox, Safari, Chrome, Edge, *etc.*). It will result in a document that is visually similar to what the Jupyter notebook looked like inside Jupyter. One point of caution here is that if there are images in your Jupyter notebook, you will need to share the image files and the `.html` file to see them.
+### Exporting to HTML
+The `.html` file format will result in a shareable file that anyone can open 
+using a web browser (*e.g.,* Firefox, Safari, Chrome, Edge, *etc.*). It will 
+result in a document that is visually similar to what the Jupyter notebook 
+looked like inside Jupyter. One point of caution here is that if there are 
+images in your Jupyter notebook, you will need to share the image files and the 
+`.html` file to see them.
 
-The `.pdf` file format will result in a shareable file that anyone can open using many programs, including Adobe Acrobat, Preview, web browsers and many more. The benefit of exporting to PDF is that it is a standalone document, even if the Jupyter notebook included references to image files. The conventional route for exporting Jupyter notebooks to `.pdf` files depends on a powerful tool called LaTeX. The default settings will result in a document that visually looks quite different from what the Jupyter notebook looked like inside Jupyter regarding font and page margins. The formatting can be customized, however, this requires some learning of the LaTeX markup language. 
+### Exporting to PDF
+The `.pdf` file format will result in a shareable file that anyone can open 
+using many programs, including Adobe Acrobat, Preview, web browsers and many 
+more. The benefit of exporting to PDF is that it is a standalone document, 
+even if the Jupyter notebook included references to image files. The 
+conventional route for exporting Jupyter notebooks to `.pdf` files depends on 
+a powerful tool called LaTeX. The default settings will result in a document 
+that visually looks quite different from what the Jupyter notebook looked 
+like inside Jupyter regarding font and page margins. The formatting can be 
+customized, however, this requires some learning of the LaTeX markup language. 
 
 ## Creating a new Jupyter notebook
 
-At some point, you will want to create a new, fresh Jupyter notebook for your own project instead of viewing, running or editing a notebook that was started by someone else. To do this, navigate to the **Launcher** tab, and click on the R icon under the **Notebook** heading. If no **Launcher** tab is visible, you can get a new one via clicking the **+** button at the top of the Jupyter file explorer. 
+At some point, you will want to create a new, fresh Jupyter notebook for your 
+own project instead of viewing, running or editing a notebook that was started 
+by someone else. To do this, navigate to the **Launcher** tab, and click on 
+the R icon under the **Notebook** heading. If no **Launcher** tab is visible, 
+you can get a new one via clicking the **+** button at the top of the Jupyter 
+file explorer. 
 
 ```{r launcher, echo = FALSE, fig.cap = "Clicking on the R icon under the Notebook heading will create a new Jupyter notebook with an R kernel.", fig.retina = 2, out.width="100%"}
 image_read("img/launcher-annotated.png") %>% 
@@ -330,10 +406,19 @@ image_read("img/launcher-annotated.png") %>%
 ```
 
 
-Once you have created a new Jupyter notebook, be sure to give it a descriptive name, as the default file name is `Untitle.ipynb`. You can rename files by right-clicking on the file name of the Jupyter notebook you just created and click **Rename**. This will make the file name editable. Use your keyboard to change the name. Pressing `Enter` or clicking anywhere else in the Jupyter the interface will save the changed file name.
+Once you have created a new Jupyter notebook, be sure to give it a descriptive 
+name, as the default file name is `Untitle.ipynb`. You can rename files by 
+right-clicking on the file name of the Jupyter notebook you just created and 
+click **Rename**. This will make the file name editable. Use your keyboard to 
+change the name. Pressing `Enter` or clicking anywhere else in the Jupyter the 
+interface will save the changed file name.
 
 We recommend not using white space or non-standard characters in file names. 
-Doing so will not prevent you from using that file in Jupyter. However, these sorts of things become troublesome as you start to do more advanced data science projects that involve repetition and automation. We recommend naming files using lower case characters and separating words by a dash (`-`) or an underscore (`_`).
+Doing so will not prevent you from using that file in Jupyter. However, these 
+sorts of things become troublesome as you start to do more advanced data 
+science projects that involve repetition and automation. We recommend naming 
+files using lower case characters and separating words by a dash (`-`) or an 
+underscore (`_`).
 
 ## Additional resources
 - The [JupyterLab Documentation](https://jupyterlab.readthedocs.io/en/latest/)
