reworded the four data science methods to give them names, and then give examples of questions they can use to answer.

--- a/index.Rmd
+++ b/index.Rmd
@@ -56,11 +56,13 @@ knitr::include_graphics("img/chapter_overview.jpeg")
 
 The four common data science problems that are useful for answering predictive and inferential data analysis questions covered in this book are:
 
-1. Predicting a class/category for a new observation/measurement (e.g., cancerous or benign tumour)
-2. Predicting a value for a new observation/measurement (e.g., 10 km race time for 20-year-old females with a BMI of 25).
-3. Finding previously unknown/unlabelled subgroups in your data (e.g., products commonly bought together on Amazon)
-4. Estimating an average or a proportion from a representative sample (group of people or units) and using that estimate to generalize to the broader population  (e.g., the proportion of undergraduate students that own an iPhone)
+1. **Classification: predicting a class/category for a new observation.** This could answer a question such as whether a tumour is cancerous or benign given some tumour cell measurements?
 
+2. **Regression: predicting a quantitative value for a new observation.** This could answer a question such as what will be the 10 km race time for 20-year-old woman, with a BMI of 25 who trains 4 times a week?
+
+3. **Clustering: finding previously unknown/unlabelled subgroups in a dataset**. This could answer a question such as what products commonly bought together on Amazon?
+
+4. **Estimation: make a good guess of an average or a proportion for the wider population from a representative sample (group of people or units), and quantify how good that guess is.** This could answer a question such as what is the proportion of undergraduate students that own an iPhone?
 
 We map each of these problems to the type of data analysis question and discuss what kinds of data are needed to answer such questions [@leek2015question; @peng2015art]. More advanced (e.g., causal or mechanistic) data analysis questions are beyond the scope of this text.
 
