--- a/index.Rmd
+++ b/index.Rmd
@@ -103,9 +103,9 @@ Often, the first step in data analysis is to load a data set into R. When we bri
 knitr::include_graphics("img/spreadsheet_vs_dataframe.PNG")
 ```
 
-The first kind of data we will learn how to load into R (as a data frame) is the 
+The first kind of data file that we will learn how to load into R (as a data frame) is the 
 spreadsheet-like *comma-separated values* format (`.csv` for short).
-These files have names ending in `.csv`, and can be opened open and saved from common spreadsheet programs like Microsoft Excel and Google Sheets. 
+These files have names ending in `.csv`, and can be opened and saved using common spreadsheet programs like Microsoft Excel and Google Sheets. 
 For example, a `.csv` file named `can_lang.csv` [is included with the code for this book](https://github.com/UBC-DSCI/introduction-to-datascience/blob/master/data/can_lang.csv). 
 This file--- originally from [{canlang} R data package](https://ttimbers.github.io/canlang/)---has language data collected in the 2016 Canadian census [@cancensus2016]. 
 If we were to open this data in a plain text editor, we would see each row on its own line, and each entry in the table separated by a comma:
@@ -114,7 +114,7 @@ If we were to open this data in a plain text editor, we would see each row on it
 head -n 10 data/can_lang.csv
 ```
 
-To load this data into R and then do anything else with it afterwards, we will need to use a *function.* 
+To load this data into R, so that we can do things with it (*e.g,* perform analyses or create data visualizations), we will need to use a *function.* 
 A function is a special word in R that takes instructions (we call these *arguments*) and does something. The function we will 
 use to read a `.csv` file into R is called `read_csv`.
 
@@ -125,10 +125,17 @@ In its most basic use-case, `read_csv` expects that the data file:
 - does not have row names.
 
 
-Below you'll see the code used to load the data into R using the `read_csv` function. But there is one extra step we need to do first. Since `read_csv` is not included in the base installation of R, 
-to be able to use it, we have to load it from somewhere else: a collection of useful functions known as a *package*. The `read_csv` function, in particular, is in the `tidyverse` package (more on this later), which we load using the `library` function.
+Below you'll see the code used to load the data into R using the `read_csv` 
+function. However, given that `read_csv` is not included in the base 
+installation of R, we will have to load it from somewhere else before we can use
+it. The place we will load it from is an R package. An R package is a collection
+of functions that once loaded, can be used in addition to the built-in R package
+functions. The `read_csv` function, in particular, can be made accessible 
+through loading the `tidyverse` package (more on this later), using the 
+`library` function.
 
-Next, we call the `read_csv` function and pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
+After loading the `tidyverse` package, we can call the `read_csv` function and 
+pass it a single argument: the name of the file, `"can_lang.csv"`. We have to put quotes around file names and other letters and words that we use in our code to distinguish it from the special words that make up the R programming language.  The file's name is the only argument we need to provide because our file satisfies everything else the `read_csv` function expects in the default use-case (which we just discussed). Later in the course, we'll learn more about dealing with more complicated files where the default arguments are not appropriate, for example, files that use spaces or tabs to separate the columns instead of commas.
 
 ```{r load_state_property_data, warning=FALSE, message=FALSE}
 library(tidyverse)
