fixed issue with cluster plot, removed x1 and x2 which was preventing the plot from rendering

--- a/09-clustering.Rmd
+++ b/09-clustering.Rmd
@@ -421,7 +421,7 @@ p1 <- ggplot(assignments, aes(flipper_length_scaled, bill_length_scaled)) +
   facet_wrap(~k) +   scale_colour_manual(values = cbbPalette) +
   labs(x = "Flipper Length (scaled)", y = "Bill Length (scaled)", colour = "Cluster") +
   theme(text = element_text(size = 20), legend.position = "none") +
-  geom_point(data = clusters %>% mutate(flipper_length_scaled = x1, bill_length_scaled = x2), aes(fill = cluster), colour = "black", size = 5, shape = 21, stroke = 2) + scale_fill_manual(values = cbbPalette)
+  geom_point(data = clusters, aes(fill = cluster), colour = "black", size = 5, shape = 21, stroke = 2) + scale_fill_manual(values = cbbPalette)
 
 p1
 ```
