--- a/index.Rmd
+++ b/index.Rmd
@@ -48,7 +48,8 @@ This textbook aims to be an approachable introduction to the world of data scien
 (1) use reproducible tools to do data analysis and 
 (2) identify and solve common problems in data science. 
 
-The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The next six chapters illustrate how to solve common problems in data science, which help answer predictive and inferential data analysis questions. In the final chapter, we discuss how to set up your own computer with tools like R and Jupyter. For readers who need help setting up their system on their computer, we recommend starting with the [Setting up your own computer] chapter before reading chapter 2. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
+The book is structured, so learners spend the first four chapters learning how to use the R programming language to load, wrangle, clean, and visualize data while answering descriptive and exploratory data analysis questions. The next six chapters illustrate how to answer
+predictive, exploratory and inferential data analysis questions with common methods in data science, including classification, regression, clustering and estimation. In the final chapters (\@ref(getting-started-with-jupyter) - \@ref(setting-up-your-own-computer)), we discuss how to use Jupyter to edit and write R code, how to use version control for collaboration, and how to install and configure the software needed for data science on your own computer. Readers may want to refer to these chapters earlier as they start exploring the examples and exercises in this book. Figure \@ref(fig:img-chapter-overview) summarizes a data science pipeline and what you will learn in each chapter of this book.
 
 ```{r img-chapter-overview, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Where are we going?", out.width="1050", fig.retina = 2}
 knitr::include_graphics("img/chapter_overview.jpeg")
