--- a/index.Rmd
+++ b/index.Rmd
@@ -97,7 +97,7 @@ By the end of the chapter, students will be able to:
 
 ## Loading a spreadsheet-like data set
 
-Often, the first step in data analysis is to load a data set into R. When we bring spreadsheet-like (think Microsoft Excel tables) data, generally shaped like a rectangle, into R, it is represented as a *data frame* object. In figure \@ref(fig:img-spreadsheet-vs-dataframe), we can see an R data frame is very similar to a spreadsheet where the rows are the collected observations, and the columns are the variables. 
+Almost always, the first step in data analysis is to load a data set into R. When we bring rectangular-shaped, spreadsheet-like data (think Microsoft Excel tables) into R, it is represented as a *data frame* object. In figure \@ref(fig:img-spreadsheet-vs-dataframe), we can see an R data frame is very similar to a spreadsheet where the rows are the collected observations, and the columns are the variables. 
 
 
 ```{r img-spreadsheet-vs-dataframe, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "A spreadsheet versus a data frame in R", out.width="850", fig.retina = 2}
