--- a/index.Rmd
+++ b/index.Rmd
@@ -150,7 +150,13 @@ read_csv("data/can_lang.csv")
 
 ## Giving a data frame a name
 
-When we loaded the language data collected in the 2016 Canadian census in R above using `read_csv`, we did not give this data frame a name. Therefore the data was just printed on the screen, and we cannot do anything else with it. That isn't very useful; we would like to give a name to the data frame that `read_csv` outputs to use later for analysis and visualization. 
+When we loaded the language data collected in the 2016 Canadian census 
+above using `read_csv`, we did not give this data frame a name. 
+Therefore the data was just printed on the screen, 
+and we cannot do anything else with it. That isn't very useful. 
+What would be more useful would be to give a name 
+to the data frame that `read_csv` outputs, 
+so that we could refer to it later for analysis and visualization.
 
 There are two possible ways to assign a name to something in R ---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, the assignment symbol is preferred and is what we will use in this course. When we name something in R utilizing the assignment symbol, `<-`, we do not need to surround it with quotes like the file name because we are formally telling R about this word and giving it a value. Only characters and words that act as values need to be surrounded by quotes.
 
