committing Tiffany's suggestion to update wording about assigning
Co-authored-by: Tiffany A. Timbers <tiffany.timbers@gmail.com>

--- a/index.Rmd
+++ b/index.Rmd
@@ -158,7 +158,16 @@ What would be more useful would be to give a name
 to the data frame that `read_csv` outputs, 
 so that we could refer to it later for analysis and visualization.
 
-There are two possible ways to assign a name to something in R ---using either the assignment symbol (`<-`) or the equals symbol (`=`). From a style perspective, the assignment symbol is preferred and is what we will use in this course. When we name something in R utilizing the assignment symbol, `<-`, we do not need to surround it with quotes like the file name because we are formally telling R about this word and giving it a value. Only characters and words that act as values need to be surrounded by quotes.
+There are two possible ways to assign a name to something in R ---
+using either the assignment symbol (`<-`) or the equals symbol (`=`). 
+From a style perspective, the assignment symbol is preferred 
+and is what we will use in this course. 
+When we name something in R using the assignment symbol, `<-`, 
+we do not need to surround the name we are giving (on `<-`'s left-hand side) 
+with quotes like the file name 
+because we are formally telling R about this new word and giving it a value. 
+Only characters and words that act as values (on `<-`'s right-hand side) 
+need to be surrounded by quotes.
 
 Let's now use the assignment symbol to give the name `can_lang` to the language data collected in the 2016 Canadian census data frame that we get from `read_csv`.
 
