--- a/index.Rmd
+++ b/index.Rmd
@@ -169,7 +169,8 @@ because we are formally telling R about this new word and giving it a value.
 Only characters and words that act as values (on `<-`'s right-hand side) 
 need to be surrounded by quotes.
 
-Let's now use the assignment symbol to give the name `can_lang` to the language data collected in the 2016 Canadian census data frame that we get from `read_csv`.
+Let's now use the assignment symbol to give the name `can_lang` 
+to the 2016 Canadian census language data frame that we get from `read_csv`. 
 
 ```{r load_data_with_name, message=FALSE}
 can_lang <- read_csv("data/can_lang.csv")
