--- a/02-wrangling.Rmd
+++ b/02-wrangling.Rmd
@@ -110,7 +110,7 @@ Table: (\#tab:datastructure-table) Basic data structures in R
 |------|------------------|
 | vector | A set of values of the *same data type* (e.g. all values are numeric). A vector can be used to represent a single variable  | 
 | data frame | A set of *vectors* of the *same length*. A data frame can be used to represent a data set. | 
-| list | A set of values, which can have different data types. Lists can be used to represent combinations of data values.| 
+| list | An ordered collection of one, or more, values. The elements in the list can be of different data types. | 
 
 > There are other data structures, such as *matrices*, which will not be covered in this book. 
 
